test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_parse/sizeof_cast.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  char
  )
  const int(1)
  ;
  }
